# parsentry

./: .dockerignore  .gitignore  .gitmodules  404.html  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  answer.md  build.rs  call_graph_test.json  call_graph_test.md  current_issue.md  deny.toml  index.html  index.txt  llms.txt  pattern_analysis_test_results.md  patterns.yml  setup-parsers.sh  terraform_security_patterns.yml  test_pattern.py
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: architecture-refactor.yml  bug-report.yml  config.yml  epic.yml  feature-request.yml  performance-optimization.md
.github/workflows/: build_windows_gnu.yml  ci.yml  docker-publish.yml  website.yml
cline_docs/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
custom_queries/c/: definitions.scm
custom_queries/cpp/: references.scm
custom_queries/go/: definitions.scm
custom_queries/javascript/: definitions.scm
custom_queries/ruby/: definitions.scm
custom_queries/rust/: references.scm
custom_queries/terraform/: definitions.scm
custom_queries/typescript/: definitions.scm  references.scm
docs/: ADD_NEW_LANGUAGE.md  DEVELOPMENT.md  call_graph.md  index.html  index.txt  stack-graphs.md  stack_graphs.md  testing.md  tree-sitter.md
docs/benchmark/: README.md  benchmark_results.json
docs/concepts/: analysis_flow.md  context.md  par_framework.md  prompts.md  response_schema.md  security_patterns.md
docs/llms/: analysis_flow.md  context.md  (+3 more)
example/: unified_analysis_demo.rs
example/rust-vulnerable-app/: Cargo.toml  README.md  answer.md  users.db
example/rust-vulnerable-app/src/: lib.rs  main.rs
examples/: parsentry.toml
security_patterns/: patterns.yml
snapshots/: vulnhuntrs__analyzer_test__analyze_file_snapshot.snap  vulnhuntrs__analyzer_test__analyze_vulnerable_code.snap  vulnhuntrs__analyzer_test__analyze_with_context.snap  vulnhuntrs__analyzer_test__response_with_context.snap
src/: analyzer.rs  analyzer_factory.rs  args.rs  benchmark.rs  call_graph.rs  call_graph_output.rs  config.rs  evaluator.rs  file_classifier.rs  iac_analyzer.rs  iac_patterns.rs  language.rs  lib.rs  llm.rs  main.rs  par_analyzer.rs  par_dataflow.rs  parser.rs  pattern_generator.rs  patterns.yml  repo.rs  repo_clone.rs  response.rs  sarif.rs  security_patterns.rs  symbol_finder.rs  unified_patterns.rs
test-output/: parsentry-results.sarif  summary.md  vulnerable.py-detects-definitions-of-functions-named-execute-query-which-execute-raw-sql-statements.md  vulnerable.py-detects-definitions-of-functions-named-unsafe-query-which-construct-sql-queries-via-string-interpolation.md
test-sample/: vuln-patterns.yml  vulnerable.py
tests/: README.md  accuracy_test_suite.rs  analyzer_test.rs  analyzer_unit_test.rs  call_graph_test.rs  context_quality_accuracy_test.rs  django_performance_benchmark_test.rs  end_to_end_accuracy_test.rs  external_benchmark_integration_test.rs  main_unit_test.rs  nodejs_performance_benchmark_test.rs  par_classification_accuracy_test.rs  parser_test.rs  pattern_generator_test.rs  performance_benchmark_test.rs  prompt_accuracy_unit_test.rs  prompt_benchmark_test.rs  prompt_slo_test.rs  prompts_unit_test.rs  real_world_benchmark_test.rs  repo_test.rs  response_unit_test.rs  security_patterns_unit_test.rs  spring_boot_performance_benchmark_test.rs  vuln_patterns_test.rs
website/: .map  bun.lockb  next.config.ts
(+375 files in other folders)
