[package]
name = "vulnhuntrs"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1.0"

[features]
snapshot-test = []

[dependencies]
tree-sitter = "0.24"
stack-graphs = { version = "0.14", features = ["storage"] }
tree-sitter-stack-graphs = { version = "0.10", features = ["cli"] }
tree-sitter-stack-graphs-java = "0.5"
tree-sitter-stack-graphs-javascript = "0.3"
tree-sitter-stack-graphs-python = "0.3"
tree-sitter-stack-graphs-typescript = "0.4"
tokio = { version = "1.36", features = ["full", "test-util", "macros"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
async-trait = "0.1"
quick-xml = { version = "0.31", features = ["serialize"] }
dotenv = "0.15"
genai = "0.1.15"

[dev-dependencies]
insta = { version = "1.42.0", features = ["yaml"] }
tempfile = "3.10"
tokio-test = "0.4"

[workspace.metadata.insta]
snapshot-path = "snapshots"
