[package]
name = "vulnhuntrs"
version = "0.5.0"
edition = "2024"

[build-dependencies]
cc = "1.0"

[features]
snapshot-test = []

[dependencies]
tree-sitter = "0.24.6"
git2 = "0.18"
streaming-iterator = "0.1"
tree-sitter-typescript = { version = "0.20" }
tokio = { version = "1.43", features = ["full", "test-util", "macros"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
async-trait = "0.1"
quick-xml = { version = "0.31", features = ["serialize"] }
dotenv = "0.15"
genai = "0.3.5"
futures = { version = "0.3", features = ["thread-pool"] }
tree-sitter-ruby = "0.20"

[dev-dependencies]
insta = { version = "1.42.0", features = ["yaml"] }
tempfile = "3.10"
tokio-test = "0.4"

[workspace.metadata.insta]
snapshot-path = "snapshots"
