[package]
name = "rust-vulnerable-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
rusqlite = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
sha2 = "0.10"
rand = "0.8"
tempfile = "3.8"
xml-rs = "0.8"
yaml-rust = "0.4"
regex = "1.10"
actix-files = "0.6"
actix-multipart = "0.6"
futures-util = "0.3"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
ldap3 = "0.11"
log = "0.4"
env_logger = "0.10"
